--- a/absolute.html
+++ b/absolute.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="https://media.permodo.net/ads/SOD20_1357/css/index.css" />
   </head>
   <body>
     <div class="phone">
-      <img src="img/iPhone6SPlus.png" alt="" class="phone__media" />
-      <div class="container" id="container">
+      <img src="https://media.permodo.net/ads/SOD20_1357/img/iPhone6SPlus.png" alt="" class="phone__media" />
+      <div class="container">
         <div id="hellopreloader"><div id="hellopreloader_preload"></div></div>
         <div id="slideList">
           <div class="slide1" id="slide1">
@@ -28,7 +28,7 @@
 
             <div class="mikro__Slide1 mikro__Slide" id="mikro__Slide1">
               <div class="mikro__img__Slide1" id="mikro__img__Slide1"></div>
-              <img id="mikro__img1__Slide1" src="img/soundWaveForm.gif" alt="" />
+              <img id="mikro__img1__Slide1" src="https://media.permodo.net/ads/SOD20_1357/img/soundWaveForm.gif" alt="" />
             </div>
             <div class="next__Slide1" id="next__Slide1"></div>
           </div>
@@ -49,7 +49,7 @@
 
             <div class="mikro__Slide2 mikro__Slide" id="mikro__Slide2">
               <div class="mikro__img__Slide2" id="mikro__img__Slide2"></div>
-              <img id="mikro__img1__Slide2" src="img/soundWaveForm.gif" alt="" />
+              <img id="mikro__img1__Slide2" src="https://media.permodo.net/ads/SOD20_1357/img/soundWaveForm.gif" alt="" />
             </div>
             <div class="next__Slide2" id="next__Slide2"></div>
           </div>
@@ -68,7 +68,7 @@
                   playsinline=""
                   preload=""
                   id="video__Slide3"
-                  src="video/video-3.mp4"
+                  src="https://media.permodo.net/ads/SOD20_1357/video/video-3.mp4"
                 ></video>
 
                 <div class="muted" id="muted__Slide3"></div>
@@ -95,7 +95,7 @@
 
             <div class="mikro__Slide3 mikro__Slide" id="mikro__Slide3">
               <div class="mikro__img__Slide3" id="mikro__img__Slide3"></div>
-              <img id="mikro__img1__Slide3" src="img/soundWaveForm.gif" alt="" />
+              <img id="mikro__img1__Slide3" src="https://media.permodo.net/ads/SOD20_1357/img/soundWaveForm.gif" alt="" />
             </div>
             <div class="next__Slide3" id="next__Slide3"></div>
           </div>
@@ -114,7 +114,7 @@
                   playsinline=""
                   preload=""
                   id="video__Slide4"
-                  src="video/video-4.mp4"
+                  src="https://media.permodo.net/ads/SOD20_1357/video/video-4.mp4"
                 ></video>
 
                 <div class="muted" id="muted__Slide4"></div>
@@ -141,7 +141,7 @@
 
             <div class="mikro__Slide4 mikro__Slide" id="mikro__Slide4">
               <div class="mikro__img__Slide4" id="mikro__img__Slide4"></div>
-              <img id="mikro__img1__Slide4" src="img/soundWaveForm.gif" alt="" />
+              <img id="mikro__img1__Slide4" src="https://media.permodo.net/ads/SOD20_1357/img/soundWaveForm.gif" alt="" />
             </div>
             <div class="next__Slide4" id="next__Slide4"></div>
           </div>
@@ -160,7 +160,7 @@
                   playsinline=""
                   preload=""
                   id="video__Slide5"
-                  src="video/video-5.mp4"
+                  src="https://media.permodo.net/ads/SOD20_1357/video/video-5.mp4"
                 ></video>
 
                 <div class="muted" id="muted__Slide5"></div>
@@ -187,7 +187,7 @@
 
             <div class="mikro__Slide5 mikro__Slide" id="mikro__Slide5">
               <div class="mikro__img__Slide5" id="mikro__img__Slide5"></div>
-              <img id="mikro__img1__Slide5" src="img/soundWaveForm.gif" alt="" />
+              <img id="mikro__img1__Slide5" src="https://media.permodo.net/ads/SOD20_1357/img/soundWaveForm.gif" alt="" />
             </div>
             <div class="next__Slide5" id="next__Slide5"></div>
           </div>
@@ -206,7 +206,7 @@
                   playsinline=""
                   preload=""
                   id="video__Slide6"
-                  src="video/video-2.mp4"
+                  src="https://media.permodo.net/ads/SOD20_1357/video/video-2.mp4"
                 ></video>
 
                 <div class="muted" id="muted__Slide6"></div>
@@ -233,67 +233,69 @@
 
             <div class="mikro__Slide6 mikro__Slide" id="mikro__Slide6">
               <div class="mikro__img__Slide6" id="mikro__img__Slide6"></div>
-              <img id="mikro__img1__Slide6" src="img/soundWaveForm.gif" alt="" />
+              <img id="mikro__img1__Slide6" src="https://media.permodo.net/ads/SOD20_1357/img/soundWaveForm.gif" alt="" />
             </div>
             <div class="next__Slide6" id="next__Slide6"></div>
           </div>
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="https://media.permodo.net/ads/SOD20_1357/js/index.js"></script>
     <script>
-      var isInterstitial = true;
-      var avgVStart = 0.01; 
-      var avgVEnd = 0.0;
-      var x_click = document.getElementsByTagName('body')[0];
-      x_click.addEventListener('click', e => {
-        if(e.target != next__Slide1 && e.target != mikro__Slide1 &&
-        e.target != next__Slide2 &&
-        e.target != next__Slide3 && e.target != close__Slide3 && e.target != muted__Slide3 && e.target != sound__Slide3 &&
-        e.target != next__Slide4 && e.target != close__Slide4 && e.target != muted__Slide4 && e.target != sound__Slide4 && 
-        e.target != next__Slide5 && e.target != close__Slide5 && e.target != muted__Slide5 && e.target != sound__Slide5 &&
-        e.target != next__Slide6 && e.target != close__Slide6 && e.target != muted__Slide6 && e.target != sound__Slide6
-        && e.target != modal__img__Slide3 && e.target != modal__img__Slide4 && e.target != modal__img__Slide5 && e.target != modal__img__Slide6
-        && e.target != mikro__img__Slide1 && e.target != mikro__img1__Slide1
-        && e.target != mikro__img__Slide2 && e.target != mikro__img1__Slide2
-        && e.target != mikro__img__Slide3 && e.target != mikro__img1__Slide3
-        && e.target != mikro__img__Slide4 && e.target != mikro__img1__Slide4
-        && e.target != mikro__img__Slide5 && e.target != mikro__img1__Slide5
-        && e.target != mikro__img__Slide6 && e.target != mikro__img1__Slide6
-         ){
-          clickout_1(); 
-        }
-      });
-      var clickTag1="";
-      function clickout_1(){
-          fireASCClicks();
-          var e=clickTag1;
-          if(dspx_debug==1){console.log(e);}
-          window.open(e);
-      } 
-      var dspx_debug = readGETParameter("dspx_debug");
-      function readGETParameter(c){var o=window.location.search.substring(1);var n=o.split("&");for(var e=0;e<n.length;e++){var i=n[e].split("=");if(i[0]==c){return decodeURIComponent(i[1])}}return c=="encodelevel"?2:0}
-      function fireASCClicks(){var _c="dspx_clicktagASC",_nn=5;var cASC=function(c,nn){var n=window.location.search.substring(1),i=n.split("&");var aa=[];for(var e=0;e<i.length;e++){var o=i[e].split("=");for(var ni=0;ni<nn;ni++){if(ni==0)cc=c;else cc=c+ni;if(o[0]==cc){aa.push(decodeURIComponent(o[1]))}}}return aa};var ctASC=cASC(_c,_nn);for(i=0;i<ctASC.length;i++){if(dspx_debug==1)console.log("fire Click ASC:"+ctASC[i]);(new Image).src=ctASC[i]}}
-      var lastSentProgress = -1
-      function trackProgressInternal(progress){
-          for(var i = lastSentProgress + 1; i <= progress; i++){
-              track_vtr(i);
-              lastSentProgress = i;
-          }
-      }
-      function track_vtr (progress) {
-          if (progress == 0) {
-              console.log(progress);
-          } else if (progress == 25) {
-              console.log(progress);
-          } else if (progress == 50) {
-              console.log(progress);
-          } else if (progress == 75) {
-              console.log(progress);
-          } else if (progress == 100) {
-              console.log(progress);
-          }
-      }
+var isInterstitial = true;
+
+var avgVStart = 0.01; 
+
+var avgVEnd = 0.0;
+
+var x_click = document.getElementsByTagName('body')[0];
+x_click.addEventListener('click', e => {
+  if(e.target != next__Slide1 && e.target != mikro__Slide1 &&
+  e.target != next__Slide2 && e.target != mikro__Slide2 &&
+  e.target != next__Slide3 && e.target != mikro__Slide3 && e.target != close__Slide3 && e.target != muted__Slide3 && e.target != sound__Slide3 &&
+  e.target != next__Slide4 && e.target != mikro__Slide4 && e.target != close__Slide4 && e.target != muted__Slide4 && e.target != sound__Slide4 && 
+  e.target != next__Slide5 && e.target != mikro__Slide5 && e.target != close__Slide5 && e.target != muted__Slide5 && e.target != sound__Slide5 &&
+  e.target != next__Slide6 && e.target != mikro__Slide6 && e.target != close__Slide6 && e.target != muted__Slide6 && e.target != sound__Slide6
+  && e.target != modal__img__Slide3 && e.target != modal__img__Slide4 && e.target != modal__img__Slide5 && e.target != modal__img__Slide6
+   ){
+    clickout_1(); 
+  }
+});
+
+var clickTag1="";
+function clickout_1(){
+    fireASCClicks();
+    var e=clickTag1;
+    if(dspx_debug==1){console.log(e);}
+    window.open(e);
+} 
+
+var dspx_debug = readGETParameter("dspx_debug");
+function readGETParameter(c){var o=window.location.search.substring(1);var n=o.split("&");for(var e=0;e<n.length;e++){var i=n[e].split("=");if(i[0]==c){return decodeURIComponent(i[1])}}return c=="encodelevel"?2:0}
+function fireASCClicks(){var _c="dspx_clicktagASC",_nn=5;var cASC=function(c,nn){var n=window.location.search.substring(1),i=n.split("&");var aa=[];for(var e=0;e<i.length;e++){var o=i[e].split("=");for(var ni=0;ni<nn;ni++){if(ni==0)cc=c;else cc=c+ni;if(o[0]==cc){aa.push(decodeURIComponent(o[1]))}}}return aa};var ctASC=cASC(_c,_nn);for(i=0;i<ctASC.length;i++){if(dspx_debug==1)console.log("fire Click ASC:"+ctASC[i]);(new Image).src=ctASC[i]}}
+
+
+var lastSentProgress = -1
+function trackProgressInternal(progress){
+    for(var i = lastSentProgress + 1; i <= progress; i++){
+        track_vtr(i);
+        lastSentProgress = i;
+    }
+}
+
+function track_vtr (progress) {
+    if (progress == 0) {
+        console.log(progress);
+    } else if (progress == 25) {
+        console.log(progress);
+    } else if (progress == 50) {
+        console.log(progress);
+    } else if (progress == 75) {
+        console.log(progress);
+    } else if (progress == 100) {
+        console.log(progress);
+    }
+}
   </script>
   </body>
 </html>
